# LibSWBF2

./: .gitignore  .gitmodules  CMakeLists.txt  CRCChecksum.py  FNVHash.py  LICENSE  LibSWBF2.sln  PackageWindowsRelease.py  README.md  UpdateLookup.py  lookup.csv
LibSWBF2/: ANM2.cpp  ANM2.h  API.cpp  API.h  ATRB.cpp  ATRB.h  Animation.cpp  Animation.h  BBOX.cpp  BBOX.h  BODY.cpp  BODY.h  BaseChunk.cpp  BaseChunk.h  BoneFrames.cpp  BoneFrames.h  BoneWeight.cpp  BoneWeight.h  CAMR.h  CMakeLists.txt  CRC.cpp  CRC.h  CYCL.cpp  CYCL.h  Color.cpp  Color.h  Container.cpp  Container.h  DATA.cpp  DATA.h  DXHelpers.h  ENVL.cpp  ENVL.h  Exceptions.h  FACE.cpp  FACE.h  FLGS.cpp  FLGS.h  FMT_.INFO.cpp  FMT_.INFO.h  (+115 more)
LibSWBF2.Test/: CMakeLists.txt  LibSWBF2.Test.cpp  LibSWBF2.Test.vcxproj  LibSWBF2.Test.vcxproj.filters  main.cpp  pch.h  testAnimationBank.cpp  testAnimationSet.cpp  testCollision.cpp  testConfig.cpp  testContainerBasic.cpp  testInstancesEntities.cpp  testLights.cpp  testSegments.cpp  testTerrainBlendMap.cpp  testTerrainHeightMap.cpp  testTerrainSplatMap.cpp  testing.h
LibSWBF2/Audio/: IMAADPCMDecoder.cpp  IMAADPCMDecoder.h  PCM16Decoder.cpp  PCM16Decoder.h  SoundDecoder.cpp  SoundDecoder.h
LibSWBF2/Chunks/: BaseChunk.cpp  BaseChunk.h  CMakeLists.txt  GenericChunk.cpp  GenericChunk.h  HeaderNames.cpp  HeaderNames.h  README.md  RawData.cpp  RawData.h  STR.cpp  STR.h  STRMULT.cpp  STRMULT.h
LibSWBF2/Chunks/BNK/: BNK.cpp  BNK.h
LibSWBF2/Chunks/LVL/: BNK.cpp  BNK.h  LVL.cpp  LVL.h  TEMPLATE.cpp  TEMPLATE.h  lvl_.cpp  lvl_.h
LibSWBF2/Chunks/LVL/Common/: DATA.cpp
LibSWBF2/Chunks/LVL/Locl/: Locl.BODY.cpp  Locl.BODY.h  Locl.cpp  Locl.h
LibSWBF2/Chunks/LVL/coll/: POSI.cpp  POSI.h  TREE.LEAF.cpp  TREE.LEAF.h  TREE.NODE.cpp  TREE.NODE.h  TREE.cpp  TREE.h  coll.INFO.cpp  coll.INFO.h  coll.cpp  coll.h
LibSWBF2/Chunks/LVL/common/: DATA.cpp  DATA.h  GenericClass.cpp  GenericClass.h  PROP.cpp  PROP.h  SCOP.cpp  SCOP.h
LibSWBF2/Chunks/LVL/config/: ConfigChunk.cpp  ConfigChunk.h  DATA.cpp  DATA.h  SCOP.cpp  SCOP.h  config.NAME.cpp  config.NAME.h  float.DATA.cpp  float.DATA.h  string.DATA.cpp  string.DATA.h
LibSWBF2/Chunks/LVL/gmod/: gmod.cpp  gmod.h
LibSWBF2/Chunks/LVL/lght/: config.NAME.cpp  config.NAME.h  float.DATA.cpp  float.DATA.h  lght.SCOP.cpp  lght.SCOP.h  lght.cpp  lght.h  lighttag.DATA.cpp  lighttag.DATA.h  lighttype.DATA.cpp  lighttype.DATA.h  string.DATA.cpp  string.DATA.h  vec2.DATA.cpp  vec2.DATA.h  vec3.DATA.cpp  vec3.DATA.h  vec4.DATA.cpp  vec4.DATA.h
LibSWBF2/Chunks/LVL/modl/: BMAP.cpp  BMAP.h  IBUF.cpp  IBUF.h  INFO.cpp  INFO.h  LVL.modl.cpp  LVL.modl.h  MTRL.cpp  MTRL.h  SKIN.cpp  SKIN.h  TNAM.cpp  TNAM.h  VBUF.cpp  VBUF.h  modl.VBUF.cpp  modl.VBUF.h  modl.segm.cpp  modl.segm.h  segm.INFO.cpp  segm.INFO.h
LibSWBF2/Chunks/LVL/plan/: plan.cpp  plan.h  plnp.cpp  plnp.h
LibSWBF2/Chunks/LVL/prim/: MASK.cpp  MASK.h  prim.DATA.cpp  prim.DATA.h  prim.INFO.cpp  prim.INFO.h  prim.cpp  prim.h
LibSWBF2/Chunks/LVL/scr_/: scr_.INFO.cpp  scr_.INFO.h  scr_.cpp  scr_.h
LibSWBF2/Chunks/LVL/skel/: skel.INFO.cpp  skel.INFO.h  skel.XFRM.cpp  skel.XFRM.h  skel.cpp  skel.h
LibSWBF2/Chunks/LVL/sound/: SampleBank.cpp  SampleBank.h  SampleBankData.cpp  SampleBankData.h  SampleBankInfo.cpp  SampleBankInfo.h  SoundBankList.cpp  SoundBankList.h  SoundBaseChunk.cpp  SoundBaseChunk.h  SoundData.cpp  SoundData.h  Stream.cpp  Stream.h  StreamData.cpp  StreamData.h  StreamInfo.cpp  StreamInfo.h  StreamList.cpp  StreamList.h  _pad.cpp  _pad.h  emo_.cpp  emo_.h
LibSWBF2/Chunks/LVL/tern/: DTEX.cpp  DTEX.h  LTEX.cpp  LTEX.h  PCHS.cpp  PCHS.h  PTCH.IBUF.cpp  PTCH.IBUF.h  PTCH.INFO.cpp  PTCH.INFO.h  PTCH.VBUF.cpp  PTCH.VBUF.h  PTCH.cpp  PTCH.h  tern.INFO.cpp  tern.INFO.h  tern.cpp  tern.h
LibSWBF2/Chunks/LVL/tex_/: BODY.cpp  BODY.h  (+16 more)
LibSWBF2/Chunks/MSH/: ANM2.cpp  ANM2.h  ATRB.cpp  ATRB.h  BBOX.cpp  BBOX.h  CAMR.h  CYCL.cpp  CYCL.h  DATA.cpp  DATA.h  ENVL.cpp  ENVL.h  FLGS.cpp  FLGS.h  FRAM.cpp  FRAM.h  GEOM.cpp  GEOM.h  KFR3.cpp  KFR3.h  MATD.cpp  MATD.h  MATI.cpp  MATI.h  MATL.cpp  MATL.h  MNDX.cpp  MNDX.h  MODL.cpp  MODL.h  MSH.DATA.cpp  MSH.DATA.h  MSH.cpp  MSH.h  MSH2.cpp  MSH2.h  MTYP.cpp  MTYP.h  NRML.cpp  (+19 more)
LibSWBF2/Chunks/TERR/: TERR.cpp  TERR.h
LibSWBF2/DirectX/: D3D9FORMAT.h  DXHelpers.cpp  DXHelpers.h  DXTexCrossPlat.cpp  DXTexCrossPlat.h  DXTexCrossPlatConverters.cpp  DXTexCrossPlatConverters.h
LibSWBF2/DirectX/detex/: decompress-bc.c  detex.h
LibSWBF2/IO/: FileReader.cpp  FileReader.h  FileReaderMemMapped.cpp  MemoryMappedReader.cpp  MemoryMappedReader.h  StreamReader.cpp  StreamReader.h
LibSWBF2/LibSWBF2/: LibSWBF2.vcxproj
LibSWBF2/Logging/: CMakeLists.txt  Logger.cpp  Logger.h  LoggerEntry.cpp  LoggerEntry.h
LibSWBF2/Tools/: Instance.cpp  Instance.h  Level.cpp  Level.h  Material.cpp  Material.h  Model.cpp  Model.h  Segment.cpp  Segment.h  Texture.cpp  Texture.h  World.cpp  World.h
LibSWBF2/Types/: Animation.cpp  Animation.h  BoneFrames.cpp  BoneFrames.h  BoneWeight.cpp  BoneWeight.h  Color.cpp  Color.h  Color4.cpp  Color4.h  Color4u8.cpp  Color4u8.h  Colorf.cpp  Colorf.h  Curve.h  Enums.cpp  Enums.h  LibString.cpp  LibString.h  List.cpp  List.h  LocalizeEntry.cpp  LocalizeEntry.h  Matrix3x3.cpp  Matrix3x3.h  Planning.cpp  Planning.h  Polygon.h  RotationFrame.cpp  RotationFrame.h  SoundBank.cpp  SoundBank.h  SoundBankHeader.cpp  SoundBankHeader.h  SoundClip.cpp  SoundClip.h  TerrainBufferEntry.cpp  TerrainBufferEntry.h  TranslationFrame.cpp  TranslationFrame.h  (+10 more)
LibSWBF2/Wrappers/: AnimationBank.cpp  AnimationBank.h  AnimationSet.cpp  AnimationSet.h  AnimationSkeleton.cpp  AnimationSkeleton.h  CollisionMesh.cpp  CollisionMesh.h  CollisionPrimitive.cpp  CollisionPrimitive.h  Config.cpp  Config.h  ConfigWrapper.cpp  ConfigWrapper.h  EntityClass.cpp  EntityClass.h  GlobalLighting.cpp  GlobalLighting.h  Instance.cpp  Instance.h  Level.cpp  Level.h  Light.cpp  Light.h  Lighting.cpp  Lighting.h  Localization.cpp  Localization.h  Material.cpp  Material.h  Model.cpp  Model.h  PlanSet.cpp  PlanSet.h  Script.cpp  Script.h  Segment.cpp  Segment.h  Sound.cpp  Sound.h  (+11 more)
(+156 files in other folders)
